--- a/MyFirstApplication/app/src/main/res/layout/cell_contact_list.xml
+++ b/MyFirstApplication/app/src/main/res/layout/cell_contact_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/cell_body"
+        android:id="@+id/llContactCellBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -18,12 +18,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/contactImage"
+            android:id="@+id/ivContactDetailsImage"
             android:layout_width="90dp"
             android:layout_height="80dp"/>
 
         <LinearLayout
-            android:id="@+id/cell_down_right"
+            android:id="@+id/llContactInformationCellRight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -33,13 +33,13 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/contactName"
+                android:id="@+id/tvContactDetailsName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Штэк Никита Сергеевич"/>
 
             <TextView
-                android:id="@+id/contactNumber"
+                android:id="@+id/tvContactNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -50,12 +50,12 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/cell_delimiter"
+        android:id="@+id/vCellDelimiter"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@drawable/cell_divider_background"
         android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/cell_body"
+        app:layout_constraintTop_toBottomOf="@+id/llContactCellBody"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
