--- a/MyFirstApplication/app/src/main/res/layout/fragment_contact_list.xml
+++ b/MyFirstApplication/app/src/main/res/layout/fragment_contact_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contact_list"
+        android:id="@+id/rvContactList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
